# castor-tape-encryption-control

./: .gitignore  README.md  interface_specification.md
conf/: tape-encryption-keys.json.example
docs/: castor-tape-encryption-control.html  castor-tape-encryption-control.txt  generate_documentation.sh  interface_specification.md
lib/: CMakeLists.txt  README.md
lib/include/: scsi_constants.hpp  scsi_lli.hpp  spout_cmd.hpp
lib/src/: main.cpp  scsi_lli.cpp  spout_cmd.cpp
src/: castor-tape-encryption-control.py
